Add scale memory